[project]
name = "voice-assistant"
version = "0.1.0"
description = "Local German-language voice assistant – Ollama + Whisper + Piper + LangGraph"
requires-python = ">=3.11"
dependencies = [
    # LLM & Orchestration
    "langchain-core>=0.3.0",
    "langchain-ollama>=0.2.0",
    "langgraph>=0.2.0",
    # Audio – STT
    "faster-whisper>=1.0.0",
    "sounddevice>=0.4.6",
    "soundfile>=0.12.1",
    # Audio – VAD
    "torch>=2.0.0",
    "torchaudio>=2.0.0",
    # Audio – TTS
    "piper-tts>=1.2.0",
    # Tools
    "duckduckgo-search>=6.0.0",
    "httpx>=0.27.0",
    "trafilatura>=1.6.0",
    # Utils
    "numpy>=1.24.0",
]

[project.scripts]
voice-assistant = "main:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
indent-width = 4

[tool.ruff.format]
indent-style = "tab"
